--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=sgserccmw4&amp;submodules=geocoder"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./1.css" />
   </head>
   <body>
     <div>지도s</div>
@@ -15,7 +16,16 @@
       <input id="submit" type="button" value="주소검색" />
     </div>
 
-    <div id="map" style="width: 1000px; height: 400px"></div>
+    <div id="map" style="width: 500px; height: 800px"></div>
+    <div id="list">
+      <ul id="info"></ul>
+    </div>
+    <div class="modal">
+      <div class="modal_body">
+        Modal
+        <div class="sang" style="border: 1px solid black; display: inline-block"></div>
+      </div>
+    </div>
     <div>
       <table>
         <thead>
@@ -365,9 +375,11 @@
                 // 성공시 건강검진병원의 정보와 네이버 맵스 출력
                 var mapOptions = {
                   center: new naver.maps.LatLng(XY.lat, XY.lng), // 현재 위치하고 있는 위도와 경도값을 사용해 위치이동
-                  zoom: 13,
+                  zoom: 8,
                 };
                 var map = new naver.maps.Map(mapDiv, mapOptions);
+                const $list = document.getElementById("list");
+                const $info = document.getElementById("info");
 
                 data.items.item.forEach(function (it, index) {
                   naver.maps.Service.geocode(
@@ -395,7 +407,10 @@
                       let name = it.hmcNm;
                       let addr = it.locAddr;
 
-                      console.log(addr);
+                      const $li = document.createElement("li");
+                      const $name = document.createTextNode(name);
+                      $li.appendChild($name);
+                      $info.appendChild($li);
 
                       //   console.log(Y);
                       let health_location = new naver.maps.LatLng(Y, X);
@@ -408,7 +423,16 @@
                         position: health_location,
                       });
 
-                      var contentString = ['<div class="iw_inner">', "   <h3>" + name + "</h3>", "   <p>" + addr + "<br />", "<a ref = button>" + "button" + "</button>", "   </p>", "</div>"].join("");
+                      var contentString = [
+                        '<div class="iw_inner">',
+                        "   <h3 id='cc'>" + name + "</h3>",
+                        "   <p>" + addr + "<br />",
+                        '<div style = "border : 1px solid green; display : inline-block" id= "de">',
+                        '<a ref="#" id =detail>' + "button" + "</a>",
+                        "</div>",
+                        "   </p>",
+                        "</div>",
+                      ].join("");
 
                       var infowindow = new naver.maps.InfoWindow({
                         content: contentString,
@@ -427,11 +451,38 @@
                           infowindow.close();
                         } else {
                           infowindow.open(map, marker);
+
+                          const $ddd = document.getElementById("detail");
+                          const body = document.querySelector("body");
+                          const modal = document.querySelector(".modal");
+                          const $name = document.querySelector(".sang");
+                          //   const $sh = document.createTextNode(name);
+
+                          //   $name.appendChild($sh);
+
+                          $ddd.addEventListener("click", function () {
+                            modal.classList.toggle("show");
+
+                            if (modal.classList.contains("show")) {
+                              body.style.overflow = "hidden";
+                            }
+                          });
+
+                          modal.addEventListener("click", (event) => {
+                            if (event.target === modal) {
+                              modal.classList.toggle("show");
+
+                              if (!modal.classList.contains("show")) {
+                                body.style.overflow = "auto";
+                              }
+                            }
+                          });
                         }
                       });
                     }
                   );
                 });
+                $list.appendChild($info);
 
                 function searchAddressToCoordinate(address) {
                   naver.maps.Service.geocode(
@@ -524,8 +575,60 @@
                         naver.maps.Event.addListener(marker, "click", function (e) {
                           if (infowindow.getMap()) {
                             infowindow.close();
+
+                            const $ddd = document.getElementById("detail");
+                            const body = document.querySelector("body");
+                            const modal = document.querySelector(".modal");
+                            const $name = document.querySelector(".sang");
+                            //   const $sh = document.createTextNode(name);
+
+                            //   $name.appendChild($sh);
+
+                            $ddd.addEventListener("click", function () {
+                              modal.classList.toggle("show");
+
+                              if (modal.classList.contains("show")) {
+                                body.style.overflow = "hidden";
+                              }
+                            });
+
+                            modal.addEventListener("click", (event) => {
+                              if (event.target === modal) {
+                                modal.classList.toggle("show");
+
+                                if (!modal.classList.contains("show")) {
+                                  body.style.overflow = "auto";
+                                }
+                              }
+                            });
                           } else {
                             infowindow.open(map, marker);
+
+                            const $ddd = document.getElementById("detail");
+                            const body = document.querySelector("body");
+                            const modal = document.querySelector(".modal");
+                            const $name = document.querySelector(".sang");
+                            //   const $sh = document.createTextNode(name);
+
+                            //   $name.appendChild($sh);
+
+                            $ddd.addEventListener("click", function () {
+                              modal.classList.toggle("show");
+
+                              if (modal.classList.contains("show")) {
+                                body.style.overflow = "hidden";
+                              }
+                            });
+
+                            modal.addEventListener("click", (event) => {
+                              if (event.target === modal) {
+                                modal.classList.toggle("show");
+
+                                if (!modal.classList.contains("show")) {
+                                  body.style.overflow = "auto";
+                                }
+                              }
+                            });
                           }
                         });
                       }
