병원정보추가

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,25 +8,75 @@
     <script type="text/javascript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=sgserccmw4&amp;submodules=geocoder"></script>
     <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./1.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css" /> -->
+    <script src="semantic/dist/semantic.min.js"></script>
   </head>
   <body>
     <div>지도s</div>
     <div class="modal_background"></div>
     <div class="modal_wrap">
       <button class="modal_close">x</button>
-      <div class="text"></div>
-      <div class="addr"></div>
-      <div class="telno"></div>
+      <h3>검진 기관 상세 정보</h3>
+      <h4>기본 정보</h4>
+      <table class="detail info">
+        <tr>
+          <th>기관명</th>
+          <td class="text"></td>
+        </tr>
+        <tr>
+          <th>주소</th>
+          <td class="addr"></td>
+        </tr>
+        <tr>
+          <th>전화번호</th>
+          <td class="telno"></td>
+        </tr>
+      </table>
+      <h4>검진 항목</h4>
+      <table>
+        <tr>
+          <th>유방암</th>
+          <td>O</td>
+        </tr>
+        <tr>
+          <th>대장암</th>
+          <td>O</td>
+        </tr>
+        <tr>
+          <th>자궁경구암</th>
+          <td>O</td>
+        </tr>
+        <tr>
+          <th>간암</th>
+          <td>O</td>
+        </tr>
+        <tr>
+          <th>구강검진</th>
+          <td class="teeth"></td>
+        </tr>
+        <tr>
+          <th>일반</th>
+          <td>O</td>
+        </tr>
+        <tr>
+          <th>영유아</th>
+          <td class="kids"></td>
+        </tr>
+        <tr>
+          <th>위암</th>
+          <td class="wee"></td>
+        </tr>
+      </table>
     </div>
 
     <div class="search">
       <input id="address" type="text" placeholder="검색할 주소" />
       <input id="submit" type="button" value="주소검색" />
     </div>
-    <div id="map" style="width: 600px; height: 600px; border: 1px solid black"></div>
+    <div id="map" style="width: 400px; height: 600px; border: 1px solid black"></div>
     <div class="searchbox">
       <div class="header">
-        <h1>Search</h1>
+        <h1>지역 검색</h1>
         <input onkeyup="filter()" type="text" id="value" placeholder="Type to Search" />
       </div>
       <div class="container"></div>
